<?xml version="1.0"?>
<package>
  <name>door_detection</name>
  <version>0.0.0</version>
  <description>The door_detection package</description>

  <maintainer email="cerberus@todo.todo">cerberus</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
